feat: implement register and create admin user
