# models/__init__.py
@@ -1,6 +1,13 @@
 # Model package
 
-from .auth_model import AuthLoginRequest, AuthLoginProviderRequest, AuthTwoFactorRequest, AuthLoginResponse
+from .auth_model import (
+    AuthLoginRequest, AuthLoginProviderRequest, AuthTwoFactorRequest,
+    AuthLoginResponse, TokenPairResponse, PreAuthResponse, TwoFAVerifyRequest,
+    RefreshTokenRequest, TwoFASetupResponse, TwoFAEnableRequest,
+    OAuthDeviceCodeRequest, OAuthDeviceCodeResponse, OAuthDevicePollRequest,
+    OAuthAuthorizationRequest, OAuthAuthorizationResponse, OAuthCallbackRequest,
+    RegisterRequest, RegisterResponse, CreateUserRequest, CreateUserResponse
+)
 from .base_response_model import BaseResponseModel
 from .default_model import GetDefaultApiEndpoint, GetDefaultHealthCheck
 from .prediction_model import PredictionModelDb
@@ -14,6 +21,9 @@ from .url_report_model import UrlReportModelDb
 from .activity_log_model import ActivityLogModelDb
 from .usage_log_model import UsageLogModelDb
 from .third_service_conf_model import ThirdServiceConfModelDb
+from .prediction_response import PredictionResponse, PredictionDetailResponse
+from .ml_response import MLServiceResponse
+from .report_response import ReportResponse, ReportListResponse
 from .stats import (
     ReportStatResponse, ReportStatListResponse, ReportStatTrendResponse,
     ReportDetailResponse, SystemStatResponse, SystemHealthResponse,
@@ -32,6 +42,22 @@ __all__ = [
     "AuthLoginProviderRequest",
     "AuthTwoFactorRequest",
     "AuthLoginResponse",
+    "TokenPairResponse",
+    "PreAuthResponse",
+    "TwoFAVerifyRequest",
+    "RefreshTokenRequest",
+    "TwoFASetupResponse",
+    "TwoFAEnableRequest",
+    "OAuthDeviceCodeRequest",
+    "OAuthDeviceCodeResponse",
+    "OAuthDevicePollRequest",
+    "OAuthAuthorizationRequest",
+    "OAuthAuthorizationResponse",
+    "OAuthCallbackRequest",
+    "RegisterRequest",
+    "RegisterResponse",
+    "CreateUserRequest",
+    "CreateUserResponse",
 
     # Base
     "BaseResponseModel",
@@ -47,6 +73,13 @@ __all__ = [
     "ReportModelItem",
     "ReportModelResponse",
     "ReportModelRequest",
+    
+    # Response Models
+    "PredictionResponse",
+    "PredictionDetailResponse",
+    "MLServiceResponse",
+    "ReportResponse",
+    "ReportListResponse",
 
     # Stats - Report
     "ReportStatResponse",
