# models/ml_response.py
@@ -1,0 +1,9 @@
+from pydantic import Field
+from models import BaseResponseModel
+from typing import Any
+
+class MLServiceResponse(BaseResponseModel):
+    data: Any = Field(
+        title="data",
+        description="ML service data"
+    )
