# models/prediction_response.py
@@ -1,0 +1,15 @@
+from pydantic import Field
+from models import BaseResponseModel
+from typing import Any
+
+class PredictionResponse(BaseResponseModel):
+    data: Any = Field(
+        title="data",
+        description="Prediction result data"
+    )
+
+class PredictionDetailResponse(BaseResponseModel):
+    data: Any = Field(
+        title="data",
+        description="Prediction detail data"
+    )
