# models/report_response.py
@@ -1,0 +1,15 @@
+from pydantic import Field
+from models import BaseResponseModel
+from typing import Any, List
+
+class ReportResponse(BaseResponseModel):
+    data: Any = Field(
+        title="data",
+        description="Report data"
+    )
+
+class ReportListResponse(BaseResponseModel):
+    data: List[Any] = Field(
+        title="data",
+        description="List of reports"
+    )
