# routers/ml/ml_route.py
@@ -1,5 +1,5 @@
 from routers import BaseRoute
-from typing import Any
+from models import MLServiceResponse
 
 class MLRoute(BaseRoute):
     def __init__(self):
@@ -9,7 +9,7 @@ class MLRoute(BaseRoute):
             responses={404: {"description": "Not found"}, 501: {"description": "Not implemented"}, 422: {"description": "Validation error"}}
         )
 
-        self.router.get("/service", response_model=Any)
+        self.router.get("/service", response_model=MLServiceResponse)(self.get_service)
 
 
     def get_service(self):
